# ml_ops_hw1

./: README.md  dashboard.py  main.py  making_datasets.py  models.py  pyproject.toml  requirements.txt  test_retraining  testing_datasets.ipynb
