[tool.poetry]
name = "poetry add requests"
version = "0.1.0"
description = ""
authors = ["MarkAzevich <azevmark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
numpy = "2.1.3"
pydantic = "2.9.2"
requests = "2.32.3"
scikit-learn = "1.5.2"
streamlit = "1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
